List levels and Ajax save functionality from edit view

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -4,10 +4,12 @@
     <body>
         <canvas id="game" height="420" width="600"></canvas>
         <br />
-        <input type="text" id="php" />
+        <label for="name">Name:</label> <input type="text" id="name" name="name" />
         <br />
-        <textarea id="output"></textarea>
-        <script type="text/javascript" src="JSON.js"></script>
+        <label for="number">Number:</label> <input type="text" id="number" name="number" />
+        <br />
+
+        <input type="button" value="Save" />
         <script type="text/javascript" src="jquery.min.js"></script>
         <script type="text/javascript" src="enigma.editor.js"></script>
     </body>
