--- a/templates/edit.html
+++ b/templates/edit.html
@@ -26,5 +26,19 @@
     </div>
 </form>
 
+<div id="save_modal" class="modal hide fade">
+    <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h3>Saved</h3>
+    </div>
+    <div class="modal-body">
+        <p>Level saved successfully!</p>
+    </div>
+    <div class="modal-footer">
+        <a class="btn btn-success" href="admin.php">Back to list</a>
+        <button type="button" class="btn btn-primary" data-dismiss="modal">Keep editing</button>
+    </div>
+</div>
+
 <script type="text/javascript" src="jquery.min.js"></script>
 <script type="text/javascript" src="enigma.editor.js"></script>
