Added bounce tiles

--- a/templates/edit.html
+++ b/templates/edit.html
@@ -10,6 +10,8 @@
             <img src="images/wall.png" rel="wall" />
             <img src="images/coin.png" rel="coin" />
             <img src="images/hole.png" rel="hole" />
+            <img src="images/bounce_l.png" rel="bounce_l" />
+            <img src="images/bounce_r.png" rel="bounce_r" />
             <img src="images/player.png" rel="player" />
         </div>
     </div>
